# api/infrastructure/response/reservation.go
@@ -8,6 +8,7 @@ import (
 // Reservation DIInterface
 type Reservation interface {
 	NewReservationCreate(ent *entity.Reservation) *responsemodel.ReservationCreate
+	NewReservationFindByBeautician(ents []*entity.Reservation) *responsemodel.ReservationFindByBeautician
 }
 
 type reservation struct {
@@ -35,5 +36,15 @@ func NewResponseModelReservation(ent *entity.Reservation) *responsemodel.Reserva
 func (r *reservation) NewReservationCreate(ent *entity.Reservation) *responsemodel.ReservationCreate {
 	return &responsemodel.ReservationCreate{
 		Reservation: NewResponseModelReservation(ent),
+	}
+}
+
+func (r *reservation) NewReservationFindByBeautician(ents []*entity.Reservation) *responsemodel.ReservationFindByBeautician {
+	rv := make([]*responsemodel.Reservation, len(ents))
+	for i, v := range ents {
+		rv[i] = NewResponseModelReservation(v)
+	}
+	return &responsemodel.ReservationFindByBeautician{
+		Reservations: rv,
 	}
 }
